@@ -90,6 +90,21 @@ then
     exit 77 # skip
 fi
 
+foundry="$devpdf_fontbuilddir"/Foundry
+
+if ! test -f "$foundry"
+then
+    echo "cannot locate Foundry file at $foundry" >&2
+    exit 99 # hard error
+fi
+
+if ! grep "BEGIN URW" "$foundry"
+then
+    echo "URW fonts not available; skipping check for any further" \
+         "fonts in the default foundry" >&2
+    exit 77 # skip
+fi
+
 for f in $supplementary_fonts
 do
     printf "checking for font description %s...\n" "$f" >&2
