@@ -1,3 +1,10 @@
+2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* font/devpdf/tests/check-default-foundry.sh.in: Die with "hard
+	error" if test script cannot locate the "Foundry" file.  Skip
+	remainder of test (for fonts not in the PostScript Level 1/PDF
+	"base 14") if the "URW" section of the "Foundry" file is absent.
+
 2026-01-25  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* m4/groff.m4 (GROFF_PERL): Update error messages.  Refer to
